(PC-10256) Fix checkbox label alignement in venue edition form

--- a/src/styles/components/pages/Venue/fields/IdentifierFields/IdentifierFields.scss
+++ b/src/styles/components/pages/Venue/fields/IdentifierFields/IdentifierFields.scss
@@ -75,4 +75,8 @@
   .venue-label-label {
     padding-left: rem(22px);
   }
+
+  .field.is-label-aligned .field-control {
+    display: flex;
+  }
 }
